Closed
Bug 395033
Opened 18 years ago
Closed 18 years ago
Use Gecko-based thumbnailing for Tabsposé
Categories
(Camino Graveyard :: Tabbed Browsing, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino2.0
People
(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)
References
Details
Attachments
(1 file)
|
8.54 KB,
patch
|
jaas
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
Since plugins don't seem to like being moved in and out of windows, we need to thumbnail at the Gecko level to prevent crashes.
| Assignee | ||
Comment 1•18 years ago
|
||
This is the trunk version, which I didn't realize until I finished has the downside of not drawing widgets, so I've left that as a TODO in the code.
Someone will need to make a branch version (using RenderOffscreen, which doesn't exist in trunk) as this method is new in trunk.
Attachment #279747 -
Flags: review?(joshmoz)
Attachment #279747 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Updated•18 years ago
|
Attachment #279747 -
Flags: superreview?(mikepinkerton)
Assignee: nobody → stuart.morgan
Blocks: 377248
Comment 2•18 years ago
|
||
Comment on attachment 279747 [details] [diff] [review]
trunk fix
sr=pink
Attachment #279747 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 3•18 years ago
|
||
Landed.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → Camino2.0
You need to log in
before you can comment on or make changes to this bug.
Description
•