Camino only - Bug 395033: Use Gecko-based thumbnailing to prevent Tabspose chrashes with plugins. r=josh sr=pink